facet-diff/tests/snapshots/diff_snapshots__diff_scalar_vec_u8_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────────────╮
│Vec<u8> [             │
│   01 02 03 04 05     │
│]                     │
╰──────────────────────╯
╭After─────────────────╮
│Vec<u8> [             │
│   01 02 63 04 05     │
│]                     │
╰──────────────────────╯
╔Diff══════════════════╗
║[                     ║
║  .. 2 unchanged items║
║  3 → 99              ║
║  .. 2 unchanged items║
║]                     ║
╚══════════════════════╝
