facet-diff/tests/snapshots/diff_snapshots__diff_scalar_vec_u8_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│Vec<u8> [           │
│   01 02 03 04 05   │
│]                   │
╰────────────────────╯
╭After───────────────╮
│Vec<u8> [           │
│   01 02 03 04 05   │
│]                   │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
