facet-diff/tests/snapshots/diff_snapshots__diff_str_vs_value_string_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: a.diff(&b).to_string()
---
[31m"world"[39m → [32m"hello"[39m
