facet-diff/tests/snapshots/diff_snapshots__diff_strings_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before─────────────╮[0m
[36m│[0m"[33mhello[0m"            [36m│[0m
[36m╰───────────────────╯[0m
[32m╭After──────────────╮[0m
[32m│[0m"[33mworld[0m"            [32m│[0m
[32m╰───────────────────╯[0m
[33m╔Diff═══════════════╗[0m
[33m║[0m[31m"hello"[39m → [32m"world"[39m  [33m║[0m
[33m╚═══════════════════╝[0m
