facet-diff/tests/snapshots/diff_snapshots__diff_struct_with_option_field.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: a.diff(&b).to_string()
---
{
  nickname: [31mSome("Ali")[39m → [32mNone[39m
}
