facet-diff/tests/snapshots/diff_snapshots__diff_struct_with_vec_of_structs_complex.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before─────────────────────────╮[0m
[36m│[0mTeam {                         [36m│[0m
[36m│[0m  name: Engineering,           [36m│[0m
[36m│[0m  lead: Employee {             [36m│[0m
[36m│[0m    id: 1,                     [36m│[0m
[36m│[0m    name: Alice,               [36m│[0m
[36m│[0m    department: Engineering,   [36m│[0m
[36m│[0m    salary: 150000,            [36m│[0m
[36m│[0m  },                           [36m│[0m
[36m│[0m  members: Vec<Employee> [     [36m│[0m
[36m│[0m    Employee {                 [36m│[0m
[36m│[0m      id: 2,                   [36m│[0m
[36m│[0m      name: Bob,               [36m│[0m
[36m│[0m      department: Engineering, [36m│[0m
[36m│[0m      salary: 120000,          [36m│[0m
[36m│[0m    },                         [36m│[0m
[36m│[0m    Employee {                 [36m│[0m
[36m│[0m      id: 3,                   [36m│[0m
[36m│[0m      name: Charlie,           [36m│[0m
[36m│[0m      department: Engineering, [36m│[0m
[36m│[0m      salary: 110000,          [36m│[0m
[36m│[0m    },                         [36m│[0m
[36m│[0m    Employee {                 [36m│[0m
[36m│[0m      id: 4,                   [36m│[0m
[36m│[0m      name: Diana,             [36m│[0m
[36m│[0m      department: Engineering, [36m│[0m
[36m│[0m      salary: 130000,          [36m│[0m
[36m│[0m    },                         [36m│[0m
[36m│[0m  ],                           [36m│[0m
[36m│[0m}                              [36m│[0m
[36m╰───────────────────────────────╯[0m
[32m╭After──────────────────────────╮[0m
[32m│[0mTeam {                         [32m│[0m
[32m│[0m  name: Engineering,           [32m│[0m
[32m│[0m  lead: Employee {             [32m│[0m
[32m│[0m    id: 1,                     [32m│[0m
[32m│[0m    name: Alice,               [32m│[0m
[32m│[0m    department: Engineering,   [32m│[0m
[32m│[0m    salary: 160000,            [32m│[0m
[32m│[0m  },                           [32m│[0m
[32m│[0m  members: Vec<Employee> [     [32m│[0m
[32m│[0m    Employee {                 [32m│[0m
[32m│[0m      id: 2,                   [32m│[0m
[32m│[0m      name: Bob,               [32m│[0m
[32m│[0m      department: Engineering, [32m│[0m
[32m│[0m      salary: 125000,          [32m│[0m
[32m│[0m    },                         [32m│[0m
[32m│[0m    Employee {                 [32m│[0m
[32m│[0m      id: 4,                   [32m│[0m
[32m│[0m      name: Diana,             [32m│[0m
[32m│[0m      department: Engineering, [32m│[0m
[32m│[0m      salary: 135000,          [32m│[0m
[32m│[0m    },                         [32m│[0m
[32m│[0m    Employee {                 [32m│[0m
[32m│[0m      id: 5,                   [32m│[0m
[32m│[0m      name: Eve,               [32m│[0m
[32m│[0m      department: Engineering, [32m│[0m
[32m│[0m      salary: 115000,          [32m│[0m
[32m│[0m    },                         [32m│[0m
[32m│[0m  ],                           [32m│[0m
[32m│[0m}                              [32m│[0m
[32m╰───────────────────────────────╯[0m
[33m╔Diff═══════════════════════════╗[0m
[33m║[0m{                              [33m║[0m
[33m║[0m  lead: {                      [33m║[0m
[33m║[0m    salary: [31m150000[39m → [32m160000[39m    [33m║[0m
[33m║[0m  }                            [33m║[0m
[33m║[0m  members: [                   [33m║[0m
[33m║[0m    {                          [33m║[0m
[33m║[0m      salary: [31m120000[39m → [32m125000[39m  [33m║[0m
[33m║[0m    }                          [33m║[0m
[33m║[0m    {                          [33m║[0m
[33m║[0m      id: [31m3[39m → [32m4[39m                [33m║[0m
[33m║[0m      name: [31mCharlie[39m → [32mDiana[39m    [33m║[0m
[33m║[0m      salary: [31m110000[39m → [32m135000[39m  [33m║[0m
[33m║[0m    }                          [33m║[0m
[33m║[0m    {                          [33m║[0m
[33m║[0m      id: [31m4[39m → [32m5[39m                [33m║[0m
[33m║[0m      name: [31mDiana[39m → [32mEve[39m        [33m║[0m
[33m║[0m      salary: [31m130000[39m → [32m115000[39m  [33m║[0m
[33m║[0m    }                          [33m║[0m
[33m║[0m  ]                            [33m║[0m
[33m║[0m}                              [33m║[0m
[33m╚═══════════════════════════════╝[0m
